--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 175,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -520,6 +520,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "predictor dataset without the non-numeric data :: \n",
+      "\n",
+      "      acceleration  cylinders  displacement  horsepower  model_year  weight\n",
+      "0            12.0          8         307.0       130.0          70    3504\n",
+      "1            11.5          8         350.0       165.0          70    3693\n",
+      "2            11.0          8         318.0       150.0          70    3436\n",
+      "3            12.0          8         304.0       150.0          70    3433\n",
+      "4            10.5          8         302.0       140.0          70    3449\n",
+      "..            ...        ...           ...         ...         ...     ...\n",
+      "393          15.6          4         140.0        86.0          82    2790\n",
+      "394          24.6          4          97.0        52.0          82    2130\n",
+      "395          11.6          4         135.0        84.0          82    2295\n",
+      "396          18.6          4         120.0        79.0          82    2625\n",
+      "397          19.4          4         119.0        82.0          82    2720\n",
+      "\n",
+      "[392 rows x 6 columns]\n",
+      "target data :: \n",
+      "\n",
+      " 0      18.0\n",
+      "1      15.0\n",
+      "2      18.0\n",
+      "3      16.0\n",
+      "4      17.0\n",
+      "       ... \n",
+      "393    27.0\n",
+      "394    44.0\n",
+      "395    32.0\n",
+      "396    28.0\n",
+      "397    31.0\n",
+      "Name: mpg, Length: 392, dtype: float64\n",
       "Training  data set shapes: (294, 6) (294,)\n",
       "Testing set shapes: (98, 6) (98,)\n"
      ]
@@ -530,8 +560,10 @@
     "# Your answer here...\n",
     "np.random.seed(123)\n",
     "predictors = mpg_data[feature_names] # feature_names variable has excluded the 'mpg' (target variable) and non-numeric columns from the feature names\n",
-    "\n",
+    "print(\"predictor dataset without the non-numeric data :: \\n\\n\",predictors)\n",
     "target = mpg_data['mpg']\n",
+    "print(\"target data :: \\n\\n\",target)\n",
+    "\n",
     "#predictors = StandardScaler().fit_transform(predictors) # standardize the predictors\n",
     "\n",
     "# Split the sacramento dataset into 75% training data and 25% test data\n",
