--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 222,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 223,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 224,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 225,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 226,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 227,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 228,
    "id": "3a2419e7",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 229,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 230,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -522,20 +522,33 @@
      "text": [
       "predictor dataset without the non-numeric data :: \n",
       "\n",
-      "      acceleration  cylinders  displacement  horsepower  model_year  weight\n",
-      "0            12.0          8         307.0       130.0          70    3504\n",
-      "1            11.5          8         350.0       165.0          70    3693\n",
-      "2            11.0          8         318.0       150.0          70    3436\n",
-      "3            12.0          8         304.0       150.0          70    3433\n",
-      "4            10.5          8         302.0       140.0          70    3449\n",
-      "..            ...        ...           ...         ...         ...     ...\n",
-      "393          15.6          4         140.0        86.0          82    2790\n",
-      "394          24.6          4          97.0        52.0          82    2130\n",
-      "395          11.6          4         135.0        84.0          82    2295\n",
-      "396          18.6          4         120.0        79.0          82    2625\n",
-      "397          19.4          4         119.0        82.0          82    2720\n",
+      "       mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+      "0    18.0          8         307.0       130.0    3504          12.0   \n",
+      "1    15.0          8         350.0       165.0    3693          11.5   \n",
+      "2    18.0          8         318.0       150.0    3436          11.0   \n",
+      "3    16.0          8         304.0       150.0    3433          12.0   \n",
+      "4    17.0          8         302.0       140.0    3449          10.5   \n",
+      "..    ...        ...           ...         ...     ...           ...   \n",
+      "393  27.0          4         140.0        86.0    2790          15.6   \n",
+      "394  44.0          4          97.0        52.0    2130          24.6   \n",
+      "395  32.0          4         135.0        84.0    2295          11.6   \n",
+      "396  28.0          4         120.0        79.0    2625          18.6   \n",
+      "397  31.0          4         119.0        82.0    2720          19.4   \n",
       "\n",
-      "[392 rows x 6 columns]\n",
+      "     model_year  origin                       name  \n",
+      "0            70     usa  chevrolet chevelle malibu  \n",
+      "1            70     usa          buick skylark 320  \n",
+      "2            70     usa         plymouth satellite  \n",
+      "3            70     usa              amc rebel sst  \n",
+      "4            70     usa                ford torino  \n",
+      "..          ...     ...                        ...  \n",
+      "393          82     usa            ford mustang gl  \n",
+      "394          82  europe                  vw pickup  \n",
+      "395          82     usa              dodge rampage  \n",
+      "396          82     usa                ford ranger  \n",
+      "397          82     usa                 chevy s-10  \n",
+      "\n",
+      "[392 rows x 9 columns]\n",
       "target data :: \n",
       "\n",
       " 0      18.0\n",
@@ -550,8 +563,8 @@
       "396    28.0\n",
       "397    31.0\n",
       "Name: mpg, Length: 392, dtype: float64\n",
-      "Training  data set shapes: (294, 6) (294,)\n",
-      "Testing set shapes: (98, 6) (98,)\n"
+      "Training  data set shapes: (294, 9) (294,)\n",
+      "Testing set shapes: (98, 9) (98,)\n"
      ]
     }
    ],
@@ -559,10 +572,12 @@
     "#from sklearn.preprocessing import StandardScaler\n",
     "# Your answer here...\n",
     "np.random.seed(123)\n",
-    "predictors = mpg_data[feature_names] # feature_names variable has excluded the 'mpg' (target variable) and non-numeric columns from the feature names\n",
-    "print(\"predictor dataset without the non-numeric data :: \\n\\n\",predictors)\n",
+    "#predictors = mpg_data[feature_names] # feature_names variable has excluded the 'mpg' (target variable) and non-numeric columns from the feature names\n",
+    "#print(\"predictor dataset without the non-numeric data :: \\n\\n\",predictors)\n",
+    "#print(\"target data :: \\n\\n\",target)\n",
+    "predictors = mpg_data\n",
     "target = mpg_data['mpg']\n",
-    "print(\"target data :: \\n\\n\",target)\n",
+    "\n",
     "\n",
     "#predictors = StandardScaler().fit_transform(predictors) # standardize the predictors\n",
     "\n",
@@ -584,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 231,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -592,6 +607,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Index(['acceleration', 'cylinders', 'displacement', 'horsepower', 'model_year',\n",
+      "       'weight'],\n",
+      "      dtype='object')\n",
       "      predictor     slope  intercept\n",
       "0  acceleration  0.057588 -15.047371\n",
       "1     cylinders -0.160143 -15.047371\n",
@@ -605,13 +623,14 @@
    "source": [
     "# Your code here ...\n",
     "\n",
-    "numeric_predictors = X_train\n",
+    "numeric_predictors = X_train[feature_names]\n",
+    "print(numeric_predictors.columns)\n",
     "#Linear regression model\n",
     "lm = LinearRegression()\n",
     "\n",
     "# fit the model\n",
     "lm.fit(\n",
-    "    X_train, y_train\n",
+    "    numeric_predictors, y_train\n",
     ")\n",
     "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
@@ -642,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 232,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -650,8 +669,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1854749513391525\n",
-      "Root Mean Square Error (RMSE): 3.185474951\n"
+      "Root Mean Square Error (RMSE): 3.185475\n"
      ]
     }
    ],
@@ -660,7 +678,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# Predict on the test data set\n",
-    "y_predicted = lm.predict(X_test) \n",
+    "y_predicted = lm.predict(X_test[feature_names]) \n",
     "\n",
     "# Calculate RMSPE for the multivariable model.\n",
     "lm_mult_test_RMSPE = mean_squared_error(\n",
