--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 233,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 234,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 235,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 236,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 237,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 238,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 239,
    "id": "3a2419e7",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 240,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 241,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -520,49 +520,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predictor dataset without the non-numeric data :: \n",
-      "\n",
-      "       mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
-      "0    18.0          8         307.0       130.0    3504          12.0   \n",
-      "1    15.0          8         350.0       165.0    3693          11.5   \n",
-      "2    18.0          8         318.0       150.0    3436          11.0   \n",
-      "3    16.0          8         304.0       150.0    3433          12.0   \n",
-      "4    17.0          8         302.0       140.0    3449          10.5   \n",
-      "..    ...        ...           ...         ...     ...           ...   \n",
-      "393  27.0          4         140.0        86.0    2790          15.6   \n",
-      "394  44.0          4          97.0        52.0    2130          24.6   \n",
-      "395  32.0          4         135.0        84.0    2295          11.6   \n",
-      "396  28.0          4         120.0        79.0    2625          18.6   \n",
-      "397  31.0          4         119.0        82.0    2720          19.4   \n",
-      "\n",
-      "     model_year  origin                       name  \n",
-      "0            70     usa  chevrolet chevelle malibu  \n",
-      "1            70     usa          buick skylark 320  \n",
-      "2            70     usa         plymouth satellite  \n",
-      "3            70     usa              amc rebel sst  \n",
-      "4            70     usa                ford torino  \n",
-      "..          ...     ...                        ...  \n",
-      "393          82     usa            ford mustang gl  \n",
-      "394          82  europe                  vw pickup  \n",
-      "395          82     usa              dodge rampage  \n",
-      "396          82     usa                ford ranger  \n",
-      "397          82     usa                 chevy s-10  \n",
-      "\n",
-      "[392 rows x 9 columns]\n",
-      "target data :: \n",
-      "\n",
-      " 0      18.0\n",
-      "1      15.0\n",
-      "2      18.0\n",
-      "3      16.0\n",
-      "4      17.0\n",
-      "       ... \n",
-      "393    27.0\n",
-      "394    44.0\n",
-      "395    32.0\n",
-      "396    28.0\n",
-      "397    31.0\n",
-      "Name: mpg, Length: 392, dtype: float64\n",
       "Training  data set shapes: (294, 9) (294,)\n",
       "Testing set shapes: (98, 9) (98,)\n"
      ]
@@ -599,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 246,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -607,9 +564,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['acceleration', 'cylinders', 'displacement', 'horsepower', 'model_year',\n",
-      "       'weight'],\n",
-      "      dtype='object')\n",
       "      predictor     slope  intercept\n",
       "0  acceleration  0.057588 -15.047371\n",
       "1     cylinders -0.160143 -15.047371\n",
@@ -623,8 +577,8 @@
    "source": [
     "# Your code here ...\n",
     "\n",
-    "numeric_predictors = X_train[feature_names]\n",
-    "print(numeric_predictors.columns)\n",
+    "numeric_predictors = X_train[feature_names] # filter non numeric columns\n",
+    "\n",
     "#Linear regression model\n",
     "lm = LinearRegression()\n",
     "\n",
@@ -661,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 243,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -678,7 +632,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# Predict on the test data set\n",
-    "y_predicted = lm.predict(X_test[feature_names]) \n",
+    "y_predicted = lm.predict(X_test[feature_names]) # filter non- numeric columns\n",
     "\n",
     "# Calculate RMSPE for the multivariable model.\n",
     "lm_mult_test_RMSPE = mean_squared_error(\n",
